@@ -1,4 +1,4 @@
-.TH SG_XCOPY "8" "February 2019" "sg3_utils\-1.45" SG3_UTILS
+.TH SG_XCOPY "8" "September 2021" "sg3_utils\-1.47" SG3_UTILS
 .SH NAME
 sg_xcopy \- copy data to and from files and devices using SCSI EXTENDED
 COPY (XCOPY)
@@ -354,7 +354,7 @@ Written by Hannes Reinecke and Douglas Gilbert.
 .SH "REPORTING BUGS"
 Report bugs to <dgilbert at interlog dot com>.
 .SH COPYRIGHT
-Copyright \(co 2000\-2019 Hannes Reinecke and Douglas Gilbert
+Copyright \(co 2000\-2021 Hannes Reinecke and Douglas Gilbert
 .br
 This software is distributed under the GPL version 2. There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
